# Engine_Game_With_C

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  MOTOR  Makefile  Motor.sln  README.md  build.ninja  cmake_install.cmake  compile_commands.json
.cmake/api/v1/reply/: cache-v2-2b670e77070b6fb0bc8e.json  cmakeFiles-v1-decdf1e3f4a1d0663c93.json  codemodel-v2-72ec3d0f0aed1d5eab0f.json  index-2023-05-05T20-24-58-0211.json  target-MOTOR-Debug-73f3953f2935397ad782.json  toolchains-v1-bf7e2bb1067040693d07.json
Motor/: Agent.cpp  Agent.h  App.cpp  App.h  Box.cpp  Box.h  Bullet.cpp  Bullet.h  Camera2D.cpp  Camera2D.h  Error.cpp  GLTexture.h  Game.cpp  Game.h  GameplayScreen.cpp  GameplayScreen.h  Glass.cpp  Glass.h  HLSLProgram.cpp  HLSLProgram.h  Human.cpp  Human.h  IGameScreen.cpp  IGameScreen.h  IOManager.cpp  IOManager.h  ImageLoader.cpp  ImageLoader.h  InputManager.cpp  InputManager.h  Level.cpp  Level.h  MainGame.cpp  MainGame.h  Motor.vcxproj  Motor.vcxproj.filters  Player.cpp  Player.h  ResourceManager.cpp  ResourceManager.h  (+24 more)
Motor/Debug/: Motor.exe.recipe  vc143.idb
Motor/Level/: level1.txt  level2-original.txt  level2.txt
Motor/Shaders/: colorShaderFrag.txt  colorShaderVert.txt
Motor/Textures/: test.jfif
